# rephone-sigfox

./: .gitignore  CMakeLists.txt  Makefile  README.md  rephone-sigfox.workspace
disk/: autostart.txt
disk/MRE/: blink.vxp
project/windows/: workspace.xml
project_blink/: CMakeLists.txt  CMakeListsOld.txt  blink.elf  main.c  rephone.cmake
read-rssi/: BLERSSI.c  _cproject.xml  _project.xml  config.xml  readme.txt
read-rssi/ARM/: read-rssi.axf  read-rssi.dbg  read-rssi_default.vxp  read-rssitemp.axf
read-rssi/res/: read-rssi.res.xml
run-uart/: CMakeLists.txt  Makefile  blerssi.c  blerssi.h  main.c  run-uart.elf  run-uart.vxp
