cmake_minimum_required(VERSION 3.6)
project(rephone-sigfox)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    common/gccmain.c
    common/gccmain.o
    common/lcd_sitronix_st7789s.c
    common/lcd_sitronix_st7789s.h
    common/lcd_sitronix_st7789s.o
    common/tp_goodix_gt9xx.c
    common/tp_goodix_gt9xx.h
    common/tp_goodix_gt9xx.o
    common/tp_i2c.c
    common/tp_i2c.h
    common/tp_i2c.o
    include/vmalarm.h
    include/vmaudio.h
    include/vmaudio_play.h
    include/vmaudio_record.h
    include/vmaudio_stream_play.h
    include/vmbearer.h
    include/vmboard.h
    include/vmbt_cm.h
    include/vmbt_gatt.h
    include/vmbt_ns.h
    include/vmbt_spp.h
    include/vmchset.h
    include/vmcmd.h
    include/vmdatetime.h
    include/vmdcl.h
    include/vmdcl_adc.h
    include/vmdcl_eint.h
    include/vmdcl_gpio.h
    include/vmdcl_i2c.h
    include/vmdcl_kbd.h
    include/vmdcl_pmu.h
    include/vmdcl_pwm.h
    include/vmdcl_sio.h
    include/vmdcl_spi.h
    include/vmdns.h
    include/vmdrv_lcd.h
    include/vmdrv_tp.h
    include/vmfirmware.h
    include/vmfs.h
    include/vmgps.h
    include/vmgraphic.h
    include/vmgraphic_font.h
    include/vmgraphic_image.h
    include/vmgsm.h
    include/vmgsm_cell.h
    include/vmgsm_gprs.h
    include/vmgsm_sim.h
    include/vmgsm_sms.h
    include/vmgsm_tel.h
    include/vmhttps.h
    include/vmkeypad.h
    include/vmlog.h
    include/vmmemory.h
    include/vmpwr.h
    include/vmres.h
    include/vmsock.h
    include/vmssl.h
    include/vmstdlib.h
    include/vmsystem.h
    include/vmtag.h
    include/vmtcp.h
    include/vmthread.h
    include/vmtimer.h
    include/vmtouch.h
    include/vmtype.h
    include/vmudp.h
    include/vmusb.h
    include/vmwdt.h
    include/vmwlan.h
    lib/LINKIT10/armgcc/peraudio.a
    lib/LINKIT10/armgcc/perbitstream.a
    lib/LINKIT10/armgcc/perbt.a
    lib/LINKIT10/armgcc/percallout.a
    lib/LINKIT10/armgcc/percam.a
    lib/LINKIT10/armgcc/percommon.a
    lib/LINKIT10/armgcc/percontact.a
    lib/LINKIT10/armgcc/perda.a
    lib/LINKIT10/armgcc/perfile.a
    lib/LINKIT10/armgcc/perhttp.a
    lib/LINKIT10/armgcc/perlbs.a
    lib/LINKIT10/armgcc/permms.a
    lib/LINKIT10/armgcc/perpayment.a
    lib/LINKIT10/armgcc/perpn.a
    lib/LINKIT10/armgcc/perpro.a
    lib/LINKIT10/armgcc/perrecord.a
    lib/LINKIT10/armgcc/persec.a
    lib/LINKIT10/armgcc/persensor.a
    lib/LINKIT10/armgcc/persim.a
    lib/LINKIT10/armgcc/persmsmng.a
    lib/LINKIT10/armgcc/persmsper.a
    lib/LINKIT10/armgcc/persmssp.a
    lib/LINKIT10/armgcc/persso.a
    lib/LINKIT10/armgcc/persysfile.a
    lib/LINKIT10/armgcc/persysstorage.a
    lib/LINKIT10/armgcc/pertcp.a
    lib/LINKIT10/armgcc/perudp.a
    lib/LINKIT10/armgcc/pervideo.a
    lib/LINKIT10/armgcc/perxml.a
    lib/LINKIT10/armgcc/scat.ld
    lua/lapi.c
    lua/lapi.h
    lua/lauxlib.c
    lua/lauxlib.h
    lua/lbaselib.c
    lua/lcode.c
    lua/lcode.h
    lua/ldblib.c
    lua/ldebug.c
    lua/ldebug.h
    lua/ldo.c
    lua/ldo.h
    lua/ldump.c
    lua/legc.c
    lua/legc.h
    lua/lfunc.c
    lua/lfunc.h
    lua/lgc.c
    lua/lgc.h
    lua/linenoise.c
    lua/linenoise.h
    lua/linit.c
    lua/liolib.c
    lua/llex.c
    lua/llex.h
    lua/llimits.h
    lua/lmathlib.c
    lua/lmem.c
    lua/lmem.h
    lua/loadlib.c
    lua/lobject.c
    lua/lobject.h
    lua/lopcodes.c
    lua/lopcodes.h
    lua/loslib.c
    lua/lparser.c
    lua/lparser.h
    lua/lrodefs.h
    lua/lrotable.c
    lua/lrotable.h
    lua/lstate.c
    lua/lstate.h
    lua/lstring.c
    lua/lstring.h
    lua/lstrlib.c
    lua/ltable.c
    lua/ltable.h
    lua/ltablib.c
    lua/ltm.c
    lua/ltm.h
    lua/lua.c
    lua/lua.h
    lua/luaconf.h
    lua/lualib.h
    lua/lundump.c
    lua/lundump.h
    lua/lvm.c
    lua/lvm.h
    lua/lzio.c
    lua/lzio.h
    lua/Makefile
    lua/print.c
    project_blink/blink.elf
    project_blink/blink.map
    project_blink/blink.vxp
    project_blink/CMakeLists.txt
    project_blink/CMakeListsOld.txt
    project_blink/main.c
    project_blink/main.o
    project_blink/Makefile
    project_blink/project_blink.project
    project_blink/rephone.cmake
    project_button/main.c
    project_button/Makefile
    project_button/project_button.project
    project_https/main.c
    project_https/Makefile
    project_https/retarget.c
    project_js/audio.c
    project_js/gpio.c
    project_js/gsm.c
    project_js/main.c
    project_js/Makefile
    project_js/project_js.project
    project_js/retarget.c
    project_js/sj_prompt.c
    project_js/sj_prompt.h
    project_js/v7.c
    project_js/v7.h
    project_lua/audio.c
    project_lua/gpio.c
    project_lua/gsm.c
    project_lua/https.c
    project_lua/i2c.c
    project_lua/main.c
    project_lua/Makefile
    project_lua/project_lua.project
    project_lua/retarget.c
    project_lua/screen.c
    project_lua/shell.c
    project_lua/shell.h
    project_lua/tcp.c
    project_lua/timer.c
    tools/libiconv2.dll
    tools/libintl3.dll
    tools/make.exe
    tools/PackTag
    tools/PackTag.exe
    tools/packtag.py
    tools/PushTool
    tools/PushTool.exe
    Makefile
    README.md
    rephone-sigfox.workspace)

include_directories(include)

add_executable(rephone-sigfox ${SOURCE_FILES})